--- a/exercise_.html
+++ b/exercise_.html
@@ -59,6 +59,6 @@
             </tr>
         </tbody>
     </table>
-    <footer>this is a footer</footer>
+    <footer>this is a footer for the nearest section content</footer>
 </body>
 </html>
