--- a/exercise_03_tables.html
+++ b/exercise_03_tables.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +15,7 @@
         <figure>
         <figcaption><strong>STUDENT MARK SHEET</strong></figcaption>  
     </figure> -->
-    <table style="border-collapse: separate; width: 400px;">
+    <table style= "width: 400px;">
         <caption><strong>STUDENT MARK SHEET</strong></caption>
         <thead>
             <tr>
