--- a/exercise_03_tables.html
+++ b/exercise_03_tables.html
@@ -3,7 +3,7 @@
 <head>
 <style>table, th, td {
     border: 1px solid black;
-    border-collapse: collapse;
+    border-collapse: separate;
   }</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
         <figure>
         <figcaption><strong>STUDENT MARK SHEET</strong></figcaption>  
     </figure> -->
-    <table style= "width: 400px;">
+    <table style= " width: 400px; color:violet;">
         <caption><strong>STUDENT MARK SHEET</strong></caption>
         <thead>
             <tr>
