--- a/2.2_exe/exercise_02_lists.html
+++ b/2.2_exe/exercise_02_lists.html
@@ -7,7 +7,7 @@
     <title>exe 2</title>
 </head>
 <body>
- <!-- figure is a tag i found in stack orver flow - first figure is like an elemnt and figure caption is text we want - and we can type whatever we want before or after the figure caption -->
+ <!-- figure is a tag i found in stack orver flow - first figure is like an elemnt like div and figure caption is text - and we can type whatever we want before or after the figure caption -->
     <figure style="color: blue;">
         <figcaption> <strong> <em> <u> first list</u></em></strong></figcaption>
         <ul>
