--- a/all_2_exe/2.3_exe/exercise_03_tables.html
+++ b/all_2_exe/2.3_exe/exercise_03_tables.html
@@ -24,7 +24,7 @@
                 <th>science</th>
                 <th>english</th>
                 <th>physics</th>
-                <th colspan="2">genral knowledge</th>
+                <th >genral knowledge</th>
             </tr>
         </thead>
         <tbody>
