--- a/all_2_exe/2.4_exe/exercise_04.html
+++ b/all_2_exe/2.4_exe/exercise_04.html
@@ -40,6 +40,7 @@
          <div class="social_media"> 
             <a  href="https://www.instagram.com/rawi_lahiany/"  class="fa fa-instagram" target="_blank"></a>
             <a href="https://en-gb.facebook.com/rawi.lahyani?fref=nf" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://github.com/rawi123" class="fa fa-github" target="_blank"></a>
         </div>
         <button onclick="location.href='http://stackoverflow.com/questions/2906582/how-to-create-an-html-button-that-acts-like-a-link'" type="button" style="color: tomato; background-color: teal;" >learn how to make a button</button>
     </div>
