--- a/5.1_entities/5.1_entites-exe.html
+++ b/5.1_entities/5.1_entites-exe.html
@@ -9,8 +9,8 @@
 <body>
     <div class="prices">
         <ul>
-            <li>nike airforce price is 50 &euro;</li>
-            <li>adidas ultra bost is 100 &pound;</li>
+            <li>nike airforce price is 50 &#8369; </li>
+            <li>adidas ultra bost is 100 &#x20B9;</li>
             <li>goren bros har prics is 150 &#8362;</li>
         </ul>
     </div>
