--- a/training/07_forms_inputs.html
+++ b/training/07_forms_inputs.html
@@ -35,7 +35,7 @@
         <div>
             <!-- number -->
             <label for="age">age</label>
-            <input type="number" name="age" id="age">
+            <input type="number" min="18" max="120" name="age" id="age">
         </div>
         <div>
             <!-- date -->
