--- a/html-beginner/all_2_exe/2.3_exe/exercise_03_tables.html
+++ b/html-beginner/all_2_exe/2.3_exe/exercise_03_tables.html
@@ -3,7 +3,7 @@
 <head>
 <style>table, th, td {
     border: 1px solid black;
-    border-collapse: separate;
+    border-collapse: collapse;
   }</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
